force-app/main/default/objects/Appointment_Scheduling__c/Appointment_Scheduling__c.object-meta.xml
<CustomObject>
    <label>Appointment Scheduling</label>
    <nameField>
        <label>Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointment Scheduling</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>