force-app/main/default/objects/Appointment_Scheduling__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>AppointmentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>