force-app/main/default/objects/Appointment_Scheduling__c/fields/CalendarSYS_Key__c.field-meta.xml
<CustomField>
    <fullName>CalendarSYS_Key__c</fullName>
    <label>CalendarSYS_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>