force-app/main/default/objects/Appointment_Scheduling__c/fields/Check_in_Link__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Link__c</fullName>
    <formula>IF( NOT(ISBLANK(UUID__c )) ,
( $Label.CheckinSiteLink + UUID__c) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check-in Link</label>
    <type>Text</type>
</CustomField>