force-app/main/default/objects/Appointment_Scheduling__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointment Scheduling</relationshipLabel>
    <relationshipName>Appointment_Scheduling</relationshipName>
    <type>Lookup</type>
</CustomField>