force-app/main/default/objects/Appointment_Scheduling__c/fields/CreaterEmail__c.field-meta.xml
<CustomField>
    <fullName>CreaterEmail__c</fullName>
    <label>CreaterEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>