force-app/main/default/objects/Appointment_Scheduling__c/fields/Duration_of_Meet__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Meet__c</fullName>
    <label>Duration of Meet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>