force-app/main/default/objects/Appointment_Scheduling__c/fields/Google_Calendar_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Event_Id__c</fullName>
    <externalId>true</externalId>
    <label>Google Calendar Event Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>