force-app/main/default/objects/Appointment_Scheduling__c/fields/Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email__c</fullName>
    <label>Guest Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>