force-app/main/default/objects/Appointment_Scheduling__c/fields/GustEmail__c.field-meta.xml
<CustomField>
    <fullName>GustEmail__c</fullName>
    <label>GustEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>