force-app/main/default/objects/Appointment_Scheduling__c/fields/hangoutLink__c.field-meta.xml
<CustomField>
    <fullName>hangoutLink__c</fullName>
    <label>hangoutLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>