force-app/main/default/objects/Appointment_Scheduling__c/fields/ISActive__c.field-meta.xml
<CustomField>
    <fullName>ISActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISActive</label>
    <type>Checkbox</type>
</CustomField>