force-app/main/default/objects/Appointment_Scheduling__c/fields/Last_Processed_SYSLog__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_SYSLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Processed SYSLog</label>
    <referenceTo>SYS_IntegrationLog__c</referenceTo>
    <relationshipLabel>Appointment Scheduling</relationshipLabel>
    <relationshipName>Appointment_Scheduling</relationshipName>
    <type>Lookup</type>
</CustomField>