force-app/main/default/objects/Appointment_Scheduling__c/fields/LocationTags__c.field-meta.xml
<CustomField>
    <fullName>LocationTags__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LocationTags</label>
    <referenceTo>LocationTags__c</referenceTo>
    <relationshipLabel>Appointment Scheduling</relationshipLabel>
    <relationshipName>Appointment_Scheduling</relationshipName>
    <type>Lookup</type>
</CustomField>