force-app/main/default/objects/Appointment_Scheduling__c/fields/ModMed_id__c.field-meta.xml
<CustomField>
    <fullName>ModMed_id__c</fullName>
    <externalId>true</externalId>
    <label>ModMed_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>