force-app/main/default/objects/Appointment_Scheduling__c/fields/PMA_Product__c.field-meta.xml
<CustomField>
    <fullName>PMA_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMA Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Appointment Scheduling</relationshipLabel>
    <relationshipName>Appointment_Scheduling</relationshipName>
    <type>Lookup</type>
</CustomField>