force-app/main/default/objects/Appointment_Scheduling__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Scheduled Appointments</relationshipLabel>
    <relationshipName>Scheduled_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>