force-app/main/default/objects/Appointment_Scheduling__c/fields/Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Product_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Option</label>
    <referenceTo>Product_Option__c</referenceTo>
    <relationshipLabel>Appointment Scheduling</relationshipLabel>
    <relationshipName>Appointment_Scheduling</relationshipName>
    <type>Lookup</type>
</CustomField>