force-app/main/default/objects/Appointment_Scheduling__c/fields/RecordDate__c.field-meta.xml
<CustomField>
    <fullName>RecordDate__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordDate</label>
    <type>Date</type>
</CustomField>