force-app/main/default/objects/Appointment_Scheduling__c/fields/Scheduled_User_TimeZone__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_User_TimeZone__c</fullName>
    <label>Scheduled User TimeZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>