force-app/main/default/objects/Appointment_Scheduling__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>confirmed</fullName>
            </value>
            <value>
                <fullName>Notconfirmed</fullName>
                <default>true</default>
                <label>Notconfirmed</label>
            </value>
            <value>
                <fullName>proposed</fullName>
            </value>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>booked</fullName>
            </value>
            <value>
                <fullName>arrived</fullName>
            </value>
            <value>
                <fullName>fulfilled</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>noshow</fullName>
            </value>
            <value>
                <fullName>entered-in-error</fullName>
            </value>
            <value>
                <fullName>checked-in</fullName>
            </value>
            <value>
                <fullName>waitlist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>