force-app/main/default/objects/Appointment_Scheduling__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <label>TimeZone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/Asuncion</fullName>
            </value>
            <value>
                <fullName>Asia/Kolkata</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>